--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
     "manifest_version": 3,
-    "name": "Deepseek-formula-copy",
+    "name": "__MSG_extensionName__",
     "version": "1.0",
-    "description": "check formula on the web page and copy its latex code to the clipboard",
+    "description": "__MSG_extensionDescription__",
+    "default_locale": "en",
     "permissions": ["activeTab", "scripting", "clipboardWrite"],
     "background": {
         "service_worker": "background.js"
